v 1.3 | state cards | class components

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#201335" />
     <meta
-      name="PROFVECTOR"
+      name="PROFVEKTOR"
       content="Сопровождение вашего бизнеса, ХАССП, МСЧ, Охрана труда"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -22,7 +22,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>PROFVECTOR</title>
+    <title>PROFVEKTOR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this page.</noscript>
